# aoc-2022

./: README.md
hs/: Main.hs  aoc2022.cabal
hs/src/: Day01.hs  Day05.hs  Day06.hs
rs/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  main.rs
src/: day01.rs  day02.rs  main.rs
